[project]
name = "api-evaluation"
version = "0.1.0"
description = "Standalone OpenRouter grounded RAG QA evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hatchling>=1.30.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
rag-eval-test = "run_test:main"
rag-eval-full = "run_full:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["run_test.py", "run_full.py", "rag_50_tasks.jsonl"]
